--- a/app/src/main/res/layout/adapter_item_canje.xml
+++ b/app/src/main/res/layout/adapter_item_canje.xml
@@ -77,8 +77,7 @@
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:layout_marginRight="8sp"
-                    android:background="@drawable/rec_rounded_green" />
+                    android:layout_marginRight="8sp" />
                 <TextView
                     android:id="@+id/product_Pts"
                     android:layout_width="wrap_content"
