--- a/app/src/main/res/layout/activity_canje_exitoso.xml
+++ b/app/src/main/res/layout/activity_canje_exitoso.xml
@@ -93,6 +93,18 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="40dp"/>
+            <Button
+                android:id="@+id/btnCerrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="40dp"
+                android:backgroundTint="@color/green"
+                android:text="Acpetar"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
