--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -25,4 +25,15 @@
         android:textFontWeight="900"
         android:textSize="20dp"
         android:layout_centerHorizontal="true"/>
+    <ImageButton
+        android:id="@+id/menu_overflow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:background="@color/white"
+        android:src="@drawable/ic_action_name" />
+
 </RelativeLayout>
