--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,10 @@
         <item name="colorOnSecondary">@color/green</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="textAppearanceSmallPopupMenu">@style/myPopupMenuTextAppearanceColor</item>
+    </style>
+    <style name="myPopupMenuTextAppearanceColor" parent="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small">
+        <item name="android:textColor">@color/darkGrey</item>
     </style>
 
     <style name="MainThemeWhite" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
