--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/transparent"
+        android:layout_marginTop="30dp"
         android:visibility="gone" />
 
     <RelativeLayout
