--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -52,6 +52,7 @@
 
 
                     <ImageView
+                        android:id="@+id/imgMedal"
                         android:layout_width="50dp"
                         android:layout_height="70dp"
                         android:background="@color/transparent"
