--- a/app/src/main/res/layout/fragment_q_r.xml
+++ b/app/src/main/res/layout/fragment_q_r.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/transparent"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_marginTop="30dp"/>
 
     <RelativeLayout
         android:id="@+id/layoutOcultar"
