--- a/app/src/main/res/layout/fragment_creacion_qr.xml
+++ b/app/src/main/res/layout/fragment_creacion_qr.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Generar un QR"
+            android:textColorHint="@color/darkGrey"
             android:textColor="@color/darkGrey"
             android:textSize="30sp"/>
         <RelativeLayout
