--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,133 +6,168 @@
     android:layout_height="match_parent"
     tools:context=".activities.Login">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="-463dp">
-
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:scaleX="1"
-            android:scaleY="1"
-            android:src="@drawable/recycling_person_2" />
-
-        <EditText
-            android:id="@+id/et_mail"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/rec_rounded"
-            android:hint="Email"
-            android:padding="10dp"
-            android:textColor="@color/darkGrey"
-            android:textColorHint="@color/grey"
-            android:textStyle="bold" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginHorizontal="20dp"
-            android:background="@drawable/rec_rounded"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/et_password"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:background="@drawable/rec_rounded"
-                android:hint="Contraseña"
-                android:inputType="textPassword"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:textColor="@color/darkGrey"
-                android:textColorHint="@color/grey"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/togglePasswordButton"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.9" />
-
-            <ImageButton
-                android:id="@+id/togglePasswordButton"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-
-                android:layout_marginRight="15dp"
-                android:background="?android:selectableItemBackground"
-                android:contentDescription="Mostrar/Ocultar contraseña"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/et_password"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.1" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/btn_olvidasteContraseña"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginVertical="10dp"
-            android:gravity="end"
-            android:text="Olvidaste tu contraseña?"
-            android:textColor="@color/green"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green"
-            android:text="Login"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/transparent"
-            android:visibility="gone"
-            android:layout_gravity="center" />
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layoutCargando"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:visibility="gone">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/darkGrey"
+                    android:textSize="20sp"
+                    android:text="Iniciando sesión automáticamente"
+                    android:layout_marginVertical="20dp"/>
+            <ProgressBar
+                android:id="@+id/progressBarLoginAutomatico"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+                android:visibility="visible"
+                android:layout_gravity="center" />
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="140dp"
+                android:layout_height="300dp"
+                android:foreground="@drawable/waiting_person"/>
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="No tienes cuenta?"
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutContenido"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:scaleX="1"
+                android:scaleY="1"
+                android:src="@drawable/recycling_person_2" />
+
+            <EditText
+                android:id="@+id/et_mail"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/rec_rounded"
+                android:hint="Email"
+                android:padding="10dp"
                 android:textColor="@color/darkGrey"
+                android:textColorHint="@color/grey"
                 android:textStyle="bold" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/rec_rounded"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/et_password"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/rec_rounded"
+                    android:hint="Contraseña"
+                    android:inputType="textPassword"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:textColor="@color/darkGrey"
+                    android:textColorHint="@color/grey"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/togglePasswordButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.9" />
+
+                <ImageButton
+                    android:id="@+id/togglePasswordButton"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+
+                    android:layout_marginRight="15dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="Mostrar/Ocultar contraseña"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/et_password"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <TextView
-                android:id="@+id/btn_registrarse"
-                android:layout_width="wrap_content"
+                android:id="@+id/btn_olvidasteContraseña"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:gravity="center"
-                android:text="Registrarse"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:gravity="end"
+                android:text="Olvidaste tu contraseña?"
                 android:textColor="@color/green"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/green"
+                android:text="Login"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+                android:visibility="gone"
+                android:layout_gravity="center" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="No tienes cuenta?"
+                    android:textColor="@color/darkGrey"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/btn_registrarse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center"
+                    android:text="Registrarse"
+                    android:textColor="@color/green"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </LinearLayout>
+
 
 
     </LinearLayout>
