--- a/app/src/main/res/layout/activity_detalle_noticia.xml
+++ b/app/src/main/res/layout/activity_detalle_noticia.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -69,15 +69,21 @@
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_cuerpo"
+                <ScrollView
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="Únete a nosotros en un emocionante evento al aire libre mientras celebramos con alegría y compromiso nuestro primer aniversario. Este especial encuentro está dedicado a la causa del reciclaje y la preservación del medio ambiente. En un día lleno de actividades interactivas, talleres educativos y entretenimiento para todas las edades, trabajaremos juntos para promover prácticas sostenibles. ¡Es una oportunidad única para aprender sobre la importancia del reciclaje y cómo cada uno de nosotros puede marcar la diferencia en la construcción de un mundo más verde y saludable! Te esperamos con entusiasmo para compartir momentos significativos, hacer nuevos amigos y contribuir a un futuro más sostenible. ¡No te lo pierdas!"
-                    android:textColor="@color/darkGrey" />
+                    android:layout_height="400dp"
+                    >
+                    <TextView
+                        android:id="@+id/tv_cuerpo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="Únete a nosotros en un emocionante evento al aire libre mientras celebramos con alegría y compromiso nuestro primer aniversario. Este especial encuentro está dedicado a la causa del reciclaje y la preservación del medio ambiente. En un día lleno de actividades interactivas, talleres educativos y entretenimiento para todas las edades, trabajaremos juntos para promover prácticas sostenibles. ¡Es una oportunidad única para aprender sobre la importancia del reciclaje y cómo cada uno de nosotros puede marcar la diferencia en la construcción de un mundo más verde y saludable! Te esperamos con entusiasmo para compartir momentos significativos, hacer nuevos amigos y contribuir a un futuro más sostenible. ¡No te lo pierdas!"
+                        android:textColor="@color/darkGrey" />
+                </ScrollView>
+
             </LinearLayout>
 
             <LinearLayout
@@ -105,4 +111,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
